<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="true">Just Java</string>
    <string name="toppings" translatable="true">Toppings</string>
    <string name="Whipped_Cream" translatable="true">Whipped Cream</string>
    <string name="Chocolate_cream" translatable="true">Chocolate</string>
    <string name="no_of_coffees" translatable="true">Quantity</string>
    <string name="Order_summary" translatable="true">Order</string>
    <string name="order_name" translatable="true">Name:<xliff:g id="name" example="Saurav">%s</xliff:g></string>
    <string name="order_summary_whipped_cream" translatable="true">Add whipped cream?<xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity" translatable="true">Quantity:<xliff:g id="addQuantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price" translatable="true">Total:<xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="thank_you" translatable="true">Thank You!</string>
    <string name="order_summary_add_chocolate">Add chocolate?<xliff:g id="addChocolate" example="true">%b</xliff:g></string>
</resources>
